--- a/style.css
+++ b/style.css
@@ -221,6 +221,28 @@ a:active {
     -webkit-tap-highlight-color: transparent;
 }
 
+select {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 0 35px 0 3%;
+    background-image: url(img/select_arrow_bg.jpg);
+    background-position: right center;
+    background-repeat: no-repeat;
+    border: 1px solid #cbcbcb;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: normal;
+    font-style: italic;
+    color: #3d3d3d;
+}
+
 /*-------------------------------------------*/
 /* ----- REUSABLE COMPONENTS ------ */
 /*-------------------------------------------*/
@@ -6247,6 +6269,7 @@ footer {
 
 .popup {
     display: block;
+    max-height: 96vh;
     padding: 10px 10px 30px 10px;
     text-align: center;
     background-color: rgb(241, 241, 241);
@@ -6685,7 +6708,7 @@ footer {
 
 .soc-btn {
     display: block;
-    height: 40px;
+    min-height: 40px;
     width: 92%;
     margin: 0 auto;
     padding: 8px 2%;
@@ -6798,16 +6821,24 @@ footer {
 .login-form .inpt-box {
     width: 100%;
     margin: 0 0 20px 0;
-    padding: 10px 0;
+    /*padding: 10px 0;*/
     background: rgba(255, 255, 255, 1);
     font-size: 0;
     line-height: 0;
+    border-top: 1px solid #fafafa;
+    border-bottom: 1px solid #fafafa;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .login-form .inpt-box input.login-inpt {
     display: inline-block;
     vertical-align: middle;
     width: 87%;
+    height: 50px;
     border: none;
     padding: 0 10px;
     font-family: "Open Sans", Arial, Verdana, sans-serif;
@@ -6836,6 +6867,19 @@ footer {
     background-image: url(img/login_popup_sprite.png);
     background-repeat: no-repeat;
     background-position: 11px -69px;
+}
+
+.login-form .inpt-box select {
+    border: none;
+    width: 100%;
+    height: 50px;
+    padding: 0 10px;
+    font-family: "Open Sans", Arial, Verdana, sans-serif;
+    font-size: 12px;
+    line-height: 22px;
+    font-weight: normal;
+    font-style: normal;
+    color: #333333;
 }
 
 
@@ -6920,6 +6964,17 @@ footer {
 }
 
 
-
-
 /*-- /Popup Login --*/
+
+
+.login-form.reg {
+    /*max-height: 90vh;*/
+}
+
+/*.popup-box {
+    max-height: 90vh;
+}*/
+
+.login-form.reg .inpt-box input.login-inpt{
+    width: 100%;
+}
