--- a/style.css
+++ b/style.css
@@ -155,6 +155,14 @@ textarea:focus:-ms-input-placeholder      {opacity: 0; transition: opacity .3s e
     animation-delay: .3s;
 }
 
+.mCSB_scrollTools {
+    width: 5px !important;
+}
+
+.mCSB_inside > .mCSB_container {
+    margin-right: 13px !important;
+}
+
 /*-------------------------------------------*/
 /* ----- DEFAULT STYLES ------ */
 /*-------------------------------------------*/
@@ -6280,6 +6288,10 @@ footer {
     -o-border-radius: 4px;
     border-radius: 4px;
     z-index: 2;
+}
+
+.popup.mCustomScrollbar {
+    padding: 10px 10px !important;
 }
 
 .back-link-box {
